[package]
name = "ecs"
version = "0.1.0"
authors = ["Arthur E. Jones <PartyLich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity_man = { path = "../entity_man" }
anymap = "0.12.1"
lazy_static = "1.4.0"

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["ttf"]
